@startuml
hide circle

entity Game {
  * id: SERIAL [PK]
  --
  title: VARCHAR
  description: TEXT
  is_team_game: BOOL
  placement_policy: ENUM("forbidden", "required")
  score_policy: ENUM("forbidden", "required", "optional")
  score_higher_is_better: BOOL | NULL
  rating_uses_score: BOOL | NULL
  allow_draws: BOOL
}

entity PlayerRuleset {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  min_players: INT
  max_players: INT
}

entity TeamRuleset {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  min_teams: INT
  max_teams: INT
  min_players_per_team: INT
  max_players_per_team: INT
}

entity Match {
  * id: SERIAL [PK]
  --
  game_id: INT [FK -> Game.id]
  group_id: INT [FK -> Group.id]
  created_by_user_id: INT [FK -> User.id]
  date: DATE
}

entity Group {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
  description: TEXT
}

entity User {
  * id: SERIAL [PK]
  --
  role_id: INT [FK -> Role.id]
  username: VARCHAR UNIQUE
  hashed_password: TEXT
  email: TEXT
}

entity UserGroup{
    * user_group_id: SERIAL [PK]
    --
    user_id: INT [FK -> User.id]
    group_id: INT [FK -> Group.id]
    user_group_role_id: INT [FK -> GroupRole.id]
}

entity MatchPlayer{
    * match_player_id: SERIAL [PK]
    --
    match_id: INT [FK -> Match.id]
    player_id: INT [FK -> Player.id]
    outcome: TEXT
    placement: INT | NULL
    score: FLOAT | NULL
}

entity Player {
  * id: SERIAL [PK]
  --
  group_id: INT [FK -> Group.id]
  name: TEXT
}

entity Role {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
}

entity GroupRole {
  * id: SERIAL [PK]
  --
  name: VARCHAR UNIQUE
}


Match }o--|| Game
Match }o--|| Group
Match }o--|| User
Match ||-o{ MatchPlayer
Player }|---|| Group
Player ||---|{ MatchPlayer
User }|--|{ Role
User ||--o{ UserGroup
Group ||--|{ UserGroup
UserGroup }|--|| GroupRole
PlayerRuleset |o--|{ Game
TeamRuleset |o--|{ Game


@enduml